# ai-classroom

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
nginx/: nginx.conf
nginx/certs/: selfsigned.crt  selfsigned.key
services/api/: Dockerfile  classroom.go  go.mod
services/api/etc/: classroom-api.yaml
services/api/internal/cache/: cache.go
services/api/internal/config/: config.go
services/api/internal/handler/: routes.go
services/api/internal/llmclient/: openrouter.go
services/api/internal/model/: session.go  types.go
services/api/internal/pipelineclient/: wsclient.go
services/api/internal/svc/: servicecontext.go
services/pipeline/: Dockerfile  docker-compose.yml  pyproject.toml
services/pipeline/app/: config.py  main.py
services/pipeline/app/models/: loader.py
services/pipeline/app/pipeline/: denoise.py  orchestrator.py  postprocess.py  stt.py  translate.py  tts.py  vad.py
services/pipeline/app/ws/: handler.py  protocol.py  session.py
services/pipeline/scripts/: download_voices.py  generate_references.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/public/: sw.js
web/src/app/: globals.css  layout.tsx  manifest.ts  sw-registrar.tsx
web/src/app/setup/: page.tsx
web/src/hooks/: useAudioPlayback.ts  useAudioRecorder.ts  useMicDevices.ts  usePushToTalk.ts  useWebSocket.ts
web/src/lib/: api.ts  constants.ts  types.ts
web/src/stores/: index.ts  lessonStore.ts  settingsStore.ts  transcriptStore.ts
(+40 files in other folders)
