[project]
name = "classroom-pipeline"
version = "0.1.0"
description = "Real-time Thai→English classroom translation pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "faster-whisper>=1.0.0",
    "ctranslate2>=4.0.0",
    "transformers>=4.40.0",
    "sentencepiece>=0.2.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "numpy>=1.26.0",
    "deepfilternet>=0.5.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "nvidia-cublas-cu12>=12.4.0",
    "TTS>=0.22.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
